package carport.entities;

/**
 * ProductComponent
 */
public record ProductComponent(int Id,
                               int Quantity) {
}
