package carport.entities;

/**
 * User
 */
public class User {
    String Name;
    String Surname;
    String Password; // TODO: maybe store passwords correctly?
    String Role;
    int AddressId;
}
