package carport.entities;

/**
 * ProductSpecification
 */
public record ProductSpecification(String Name,
                                   String Details,
                                   String Unit) {
}
