-- This script was generated by the ERD tool in pgAdmin 4.
-- Please log an issue at https://github.com/pgadmin-org/pgadmin4/issues/new/choose if you find any bugs, including reproduction steps.
BEGIN;


CREATE TABLE IF NOT EXISTS public.address
(
    id character varying COLLATE pg_catalog."default" NOT NULL,
    street character varying COLLATE pg_catalog."default",
    "number" bigint,
    level bigint,
    postal_code bigint,
    CONSTRAINT address_pkey PRIMARY KEY (id)
);

CREATE TABLE IF NOT EXISTS public.ansat
(
    id bigserial NOT NULL,
    email character varying COLLATE pg_catalog."default",
    password character varying COLLATE pg_catalog."default",
    role character varying COLLATE pg_catalog."default",
    CONSTRAINT ansat_pkey PRIMARY KEY (id)
);

CREATE TABLE IF NOT EXISTS public.delivery_type
(
    id bigserial NOT NULL,
    description character varying COLLATE pg_catalog."default",
    CONSTRAINT delivery_type_pkey PRIMARY KEY (id)
);

CREATE TABLE IF NOT EXISTS public.dokumentation
(
    id bigserial NOT NULL,
    name character varying COLLATE pg_catalog."default",
    data bytea,
    CONSTRAINT dokumentation_pkey PRIMARY KEY (id)
);

CREATE TABLE IF NOT EXISTS public.kunde
(
    id bigserial NOT NULL,
    email character varying COLLATE pg_catalog."default",
    password character varying COLLATE pg_catalog."default",
    CONSTRAINT kunde_pkey PRIMARY KEY (id)
);

CREATE TABLE IF NOT EXISTS public.produkt
(
    id bigserial NOT NULL,
    name character varying COLLATE pg_catalog."default",
    description character varying COLLATE pg_catalog."default",
    documentation_id bigint,
    specification character varying[] COLLATE pg_catalog."default",
    links character varying[] COLLATE pg_catalog."default",
    delivery_type bigint[],
    CONSTRAINT produkt_pkey PRIMARY KEY (id)
);

CREATE TABLE IF NOT EXISTS public.vare
(
    id bigserial NOT NULL,
    length double precision,
    height double precision,
    weight double precision,
    price numeric,
    name character varying COLLATE pg_catalog."default",
    description character varying COLLATE pg_catalog."default",
    extra_info character varying[] COLLATE pg_catalog."default",
    CONSTRAINT vare_pkey PRIMARY KEY (id)
);
END;
